--- a/styles/main.css
+++ b/styles/main.css
@@ -52,14 +52,51 @@ details summary {
   cursor: pointer;
 }
 
-img.next-image {
-  margin: 0;
-}
-
 .prose a {
   color: #0074de;
 }
 
 .nav-line .nav-link {
   color: #69778c;
+}
+
+.image-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin: 30px 0;
+  & img {
+    margin: 0;
+    border-radius: 10px;
+  }
+}
+
+.image-spacer {
+  width: 15px;
+  flex-shrink: 0;
+}
+
+.link-badge {
+  display: inline-block;
+  position: relative;
+  width: 180px;
+  height: 60px;
+  padding: 10px 20px;
+  margin: 20px 15px 20px 0;
+  background-color: rgb(250 250 250);
+  border: 1px solid rgb(229 229 229);
+  border-radius: 5px;
+  & img {
+    margin: 0;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .link-badge {
+    background-color: rgb(38 38 38);
+    border-color: rgb(64 64 64);
+    & img {
+      filter: invert(1);
+    }
+  }
 }
