--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,16 @@
   font-named-instance: 'Italic';
 }
 
+p, a, span {
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  article {
+    padding-top: 50px;
+  }
+}
+
 body {
   font-family: 'Inter var', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
@@ -76,13 +86,17 @@ details summary {
   flex-shrink: 0;
 }
 
+.badge-container {
+  margin: 20px 0;
+}
+
 .link-badge {
   display: inline-block;
   position: relative;
   width: 180px;
   height: 60px;
   padding: 10px 20px;
-  margin: 20px 15px 20px 0;
+  margin: 5px 15px 5px 0;
   background-color: rgb(250 250 250);
   border: 1px solid rgb(229 229 229);
   border-radius: 5px;
